fixed tree alignment in footer

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,18 +16,15 @@
   height: 35rem;
   background-color: #97aabd;
   position: relative;
-  padding-top: 5rem; }
+  padding-top: 5rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center; }
 
 .blue-pink-logo {
-  position: absolute;
-  bottom: 0rem;
-  left: 9rem; }
-  @media only screen and (min-width: 700px) {
-    .blue-pink-logo {
-      left: 28rem; } }
-  @media only screen and (min-width: 700px) {
-    .blue-pink-logo {
-      left: 53rem; } }
+  position: relative;
+  text-align: center; }
 
 .bottomnav {
   display: flex;
